--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,49 +28,10 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
+						<li><a class="page-scroll" href="/">Blog</a></li>
                         <li><a class="page-scroll" href="/about">About Me</a></li>
 
-                        {% if page.title == site.index.python %}
-                            <li class="active">
-                        {% else %}
-                            <li>
-                        {% endif %}
-                            <a class="page-scroll" href="/python/">{{ site.index.python }}</a></li>
-
-                        {% if page.title == site.index.linux %}
-                            <li class="active">
-                        {% else %}
-                            <li>
-                        {% endif %}
-                            <a class="page-scroll" href="/linux/">{{ site.index.linux }}</a></li>
-
-                        {% if page.title == site.index.html %}
-                            <li class="active">
-                        {% else %}
-                            <li>
-                        {% endif %}
-                            <a class="page-scroll" href="/html/">{{ site.index.html }}</a></li>
-
-                        {% if page.title == site.index.database %}
-                            <li class="active">
-                        {% else %}
-                            <li>
-                        {% endif %}
-                            <a class="page-scroll" href="/database/">{{ site.index.database }}</a></li>
-
-                        {% if page.title == site.index.mac %}
-                            <li class="active">
-                        {% else %}
-                            <li>
-                        {% endif %}
-                            <a class="page-scroll" href="/mac/">{{ site.index.mac }}</a></li>
-
-                        {% if page.title == site.index.life %}
-                            <li class="active">
-                        {% else %}
-                            <li>
-                        {% endif %}
-                            <a class="page-scroll" href="/life/">{{ site.index.life }}</a></li>
+            
                     </ul>
                 </div>
             </div>
