--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,35 +27,49 @@ layout: default
                                     <button class="btn btn-white btn-xs" type="button">{{ tag }}</button>
                                 {% endfor %}
                         </div>
-                        <div class="col-md-6">
-                            <div class="small text-right">
-                                <h5>Stats:</h5>
-                                <div> 
-                                {% if site.changyan %}
-                                    <i class="fa fa-comments-o"> </i> <span id = "url::{{post.url | prepend: page.url}}" class = "cy_cmt_count" ></span> comments
-                                {% endif %}
-                                {% if site.disqus %}
-                                <i class="fa fa-comments-o"> </i> <span class='disqus-comment-count' data-disqus-url="{{ site.url }}{{ page.url }}">0</span> comments
-                                {% endif %}
-                                </div>
-                            </div>
-                        </div>
+
+
                     </div>
                     <br>
+					<div class="row">
+						<div class="col-lg-12">
+						<h2>Other Posts:</h2>
+							<div class="wrapper wrapper-content animated fadeInRight">
+
+								<!-- latest 10 blog -->
+								{% for post in site.posts limit 10%}
+								{% if post.title != page.title %}
+								<div class="vote-item">
+									<div class="row">
+										<div class="col-md-10">
+											<div class="vote-actions">
+											</div>
+											<a href="{{ post.url }}" class="vote-title">
+												{{ post.title }}
+											</a>
+											<div class="vote-info">
+												<i class="fa fa-clock-o"></i> <a>{{ post.date | date: "%-d %b %Y" }}</a>
+												<div style="font-size: 18px">{{ post.excerpt }}</div>
+											</div>
+											
+										</div>
+										<div class="col-md-2 ">
+											<div class="vote-icon">
+												{% if post.icon %}<i class="fa {{ post.icon }}"> </i>{% endif %}
+											</div>
+										</div>
+									</div>
+								</div>
+								{% endif %}
+								{% endfor %}
+
+							</div>
+						</div>
+
+					</div>
                     <div class="row">
                         <div class="col-lg-12">
-                            <!-- donate -->
-                            {% if site.donate %}
-                                {% include donate.html %}
-                            {% endif %}
-                            <br>
-                            <!-- share -->
-                            {% if site.bshare %}
-                                {% include share.html %}
-                            {% endif %}
-                            <br>
-                            <!-- comment -->
-                            {% include comments.html %}
+
                         </div>
                     </div>
 
