--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
     {% endif %}
   </title>
   <!-- favicon -->
-  <link rel="shortcut icon" href="{{ "static/img/favicon.ico" | prepend: site.baseurl }}">
+  <link rel="shortcut icon" href="{{ "static/img/three-bars-graph.png" | prepend: site.baseurl }}">
 
   <!-- Third-party CSS -->
   <link href="{{"bower_components/bootstrap/dist/css/bootstrap.min.css" | prepend: site.baseurl }}" rel="stylesheet">
