--- a/_includes/index_head.html
+++ b/_includes/index_head.html
@@ -8,7 +8,7 @@
   <meta name="author" content="{{ site.author.name }}">
   <title>{{ site.title }}</title>
   <!-- favicon -->
-  <link rel="shortcut icon" href="{{ "static/img/favicon.ico" | prepend: site.baseurl }}">
+  <link rel="shortcut icon" href="{{ "static/img/three-bars-graph.png" | prepend: site.baseurl }}">
 
   <!-- Third-party CSS -->
   <link href="{{"bower_components/bootstrap/dist/css/bootstrap.min.css" | prepend: site.baseurl }}" rel="stylesheet">
