fixed the post CSS issue on local

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<script async src="{{"static/js/count_page.js"| prepend: site.baseurl }}"></script>
+<script async src="{{ site.baseurl }}/static/js/count_page.js"></script>
 <!-- <script async src="{{"static/js/count_page.js"| prepend: site.baseurl }}"></script> -->
   <!-- Baidu analytics -->
   {% if site.ba %}
