--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
   <link href="{{ site.baseurl }}/static/font-mfizz/font-mfizz.css" rel="stylesheet">
   <link href="{{ site.baseurl }}/bower_components/toastr/toastr.min.css" rel="stylesheet">
   <link href="{{ site.baseurl }}/bower_components/jquery.gritter/css/jquery.gritter.css" rel="stylesheet">
-  <link rel="stylesheet" href="{{ site.baseurl }}/search/css/cb-search.css">
+  <!--<link rel="stylesheet" href="{{ site.baseurl }}/search/css/cb-search.css">-->
 
   <!-- Custom styles for this template -->
   <link href="{{ site.baseurl }}/static/css/style.min.css" rel="stylesheet">
@@ -35,10 +35,10 @@
 
   <!-- Scripts -->
   <script src="{{ site.baseurl }}/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="{{ site.baseurl }}/search/js/bootstrap3-typeahead.min.js"></script>
+  <!--<script src="{{ site.baseurl }}/search/js/bootstrap3-typeahead.min.js"></script>-->
 
   <!-- cb-search -->
-  <script src="{{ site.baseurl }}/search/js/cb-search.js"></script>
+  <!--<script src="{{ site.baseurl }}/search/js/cb-search.js"></script>-->
   <script>
     $(function(){
         $("pre").css('display','block');
